--- a/src/main/resources/static/user/mypage/orderList/css/orderDetail.css
+++ b/src/main/resources/static/user/mypage/orderList/css/orderDetail.css
@@ -1,18 +1,147 @@
-.sub-info-bg{
-    display: flex;
-    align-items: center;
-    height: 80px;
+.sub-info-bg {
+	display: flex;
+	align-items: center;
+	height: 80px;
 }
 
 .order-purchase-date {
-    border-right: 1px solid #c0c0c0;
-    font-weight: 700;
-    margin-right: 15px;
-    padding-right: 20px;
+	border-right: 1px solid #c0c0c0;
+	font-weight: 700;
+	margin-right: 15px;
+	padding-right: 20px;
 }
 
 .order-num-wrap {
 	display: flex;
 	font-weight: 300;
 	gap: 7px;
+}
+
+.container {
+	gap: 60px;
+	display: flex;
+	flex-direction: column;
+}
+
+.box-title {
+	height: 65px;
+	line-height: 65px;
+	padding-left: 10px;
+	border-top: 1px solid #000000;
+}
+
+.order-items {
+	display: flex;
+	align-items: center;
+	padding: 15px 30px 15px 50px;
+	border-top: 1px solid #c0c0c0;
+	gap: 15px;
+}
+
+.book-thumbnail {
+	width: 82px;
+	height: 115px;
+}
+
+.book-info {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.book-name-qty {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.purchase-qty {
+	color: #7e7e7e;
+	font-size: 14px;
+}
+
+.order-price-status {
+	display: flex;
+	align-items: center;
+	gap: 50px;
+}
+
+.order-status {
+	color: #845EC2;
+	font-weight: 600;
+}
+
+.delivery-info-title, .payment-info-title, .income-deduction-title {
+	gap: 60px;
+	display: flex;
+	flex-direction: column;
+	font-size: 20px;
+	font-weight: 600;
+	height: 50px;
+	border-bottom: 1px solid;
+	line-height: 50px;
+}
+
+.delivery-info-wrap {
+	display: flex;
+	gap: 100px;
+	padding: 28px 40px;
+	border-bottom: solid 1px #c0c0c0;
+}
+
+.recipient-info-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    font-weight: 300;
+}
+
+.payment-info-wrap{
+	height: 80px;
+	border-bottom: 1px solid #c0c0c0;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 0 20px;
+}
+
+.order-price-wrap {
+	border-right: 1px solid #c0c0c0;
+}
+
+.order-price-wrap, .payment-price-wrap {
+	padding: 0 20px;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	justify-content: space-between;
+}
+
+.delivery-info-detail, .price-title, .order-price, .payment-price {
+	font-weight: 600;
+}
+.price-wrap {
+	display: flex;
+}
+
+.income-deduction-wrap {
+    justify-content: space-between;
+    height: 80px;
+    border-bottom: 1px solid #c0c0c0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 40px;
+}
+
+.default-btn {
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+    margin-top: 35px;
+}
+
+.btn-area {
+	text-align: center;
 }
