--- a/src/main/resources/templates/user/mypage/customer_order/orderDetail.html
+++ b/src/main/resources/templates/user/mypage/customer_order/orderDetail.html
@@ -15,24 +15,64 @@
 			</div>
 		</div>
 
-		<!--  
-		<div class="order-details">
-			<h3>주문 내용</h3>
-			<div class="order-items" th:each="item : ${orderDetails.items}">
-				<div class="order-item">
-					<img class="book-thumbnail" th:src="'/images/books/' + ${item.book_thumbnail_changed != null ? item.book_thumbnail_changed : 'noimg.png'}" alt="책 이미지">
+		<div class="container">
+			<div class="order-items-box">
+				<h3 class="box-title">배송</h3>
+				<div class="order-items" th:each="detail : ${orderDetails}">
+					<img class="book-thumbnail" th:src="'/images/books/' + ${detail.book_thumbnail_changed != null ? detail.book_thumbnail_changed : 'noimg.png'}" alt="책 이미지">
 					<div class="book-info">
-						<span class="book-name" th:text="${item.book_name}"></span> <span class="purchase-qty" th:text="'수량: ' + ${item.order_detail_qty}"></span> <span class="order-price" th:text="${#numbers.formatInteger(item.order_detail_price * item.order_detail_qty, 0, 'COMMA')} + '원'"></span>
+						<div class="book-name-qty">
+							<span class="book-name" th:text="${detail.book_name}"></span> <span class="purchase-qty" th:text="'수량: ' + ${detail.order_detail_qty} + '개'"></span>
+						</div>
+						<div class="order-price-status">
+							<span class="order-price" th:text="${#numbers.formatInteger(detail.order_detail_price * detail.order_detail_qty, 0, 'COMMA')} + '원'"></span> <span class="order-status" th:text="${orderDetails.order_detail_status}"></span>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="order-detail-info">
+				<h3 class="delivery-info-title">배송정보</h3>
+				<div class="delivery-info-wrap">
+					<span class="delivery-info-detail">기본정보</span>
+					<div class="recipient-info-wrap">
+						<span th:text="${orderDetails.recipient_name}"></span> <span th:text="${orderDetails.recipient_phoneno}"></span> <span th:text="${orderDetails.order_addr} + ' ' + ${orderDetails.order_addr_detail}"></span>
+					</div>
+				</div>
+			</div>
+			<div class="order-detail-info">
+				<h3 class="payment-info-title">결제정보</h3>
+				<div class="payment-info-wrap">
+					<div class="order-price-wrap">
+						<span class="price-title">주문금액</span> 
+						<div class="price-wrap">
+							<span class="order-price" th:text="${#numbers.formatInteger(orderDetails.order_price_total, 0, 'COMMA')}"></span>
+							<p>원</p>
+						</div>
+					</div>
+					<div class="payment-price-wrap">
+						<span class="price-title">결제금액</span> 
+						<div class="price-wrap">
+							<span class="payment-price" th:text="${#numbers.formatInteger(orderDetails.order_price_total, 0, 'COMMA')}"></span>
+							<p>원</p>
+						</div>
+						
+					</div>
+				</div>
+			</div>
+			<div class="order-detail-info">
+				<h3 class="income-deduction-title">도서 소득공제</h3>
+				<div class="income-deduction-wrap">
+					<span class="delivery-info-detail">신용카드, 간편결제</span>
+						<div class="price-wrap">
+							<span class="payment-price" th:text="${#numbers.formatInteger(orderDetails.order_price_total, 0, 'COMMA')}"></span>
+							<p>원</p>
+						</div>
+				</div>
+			</div>
 		</div>
-		<div class="order-status">
-			<h3>주문 상태</h3>
-			<span th:text="${orderDetails.order_status}"></span>
+		<div class="btn-area">
+			<button class="default-btn" onclick="location.href='/user/mypage/orderList'">주문/배송 목록</button>
 		</div>
--->
-
 	</div>
 </div>
 </html>
