--- a/src/main/resources/static/user/common/css/mypage.css
+++ b/src/main/resources/static/user/common/css/mypage.css
@@ -157,3 +157,42 @@
 	padding: 12px;
 	border-radius: 5px;
 }
+
+.btn-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+	margin-top: 30px;
+}
+
+.select-box {
+	display: flex;
+	align-items: center;
+	position: relative;
+}
+
+select {
+	padding-right: 30px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+
+.select-arrow-down {
+	position: absolute;
+    top: 50%;
+    right: 10px;
+    width: 0; 
+    height: 0; 
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid black;
+    pointer-events: none; 
+    transform: translateY(-50%); 
+}
+
+textarea , select {
+	font-family: 'SUIT', sans-serif;
+}
