--- a/src/main/resources/templates/user/mypage/inquiries/inquiriesReg.html
+++ b/src/main/resources/templates/user/mypage/inquiries/inquiriesReg.html
@@ -5,45 +5,94 @@
       layout:decorate="~{/user/common/layout/myPageLayout}"
       layout:fragment="Content">
 	 
-	 <link rel="stylesheet" href="/user/mypage/inquiries/css/inquiries.css"/>
+	 <link rel="stylesheet" href="/user/mypage/inquiries/css/inquiriesReg.css"/>
 
 <div class="content">
 	<div class="myinfo-content">
-	
+
 		<p class="myinfo-title">1:1 문의 접수</p>
 		<div class="inquiries-container">
+		
+			<div class="two-column-grid" style="gap: 12px;">
 			
-			<div style="display: grid; grid-template-columns: 100px 1fr; gap: 30px;">
-				<div>
-					<p class="important">문의유형</p>
+				<p class="sub-title-font important">문의유형</p>
+			
+				<div class="select-box">
+					<select class="select-font input-full" id="inquiryTypeSelect" onchange="toggleInquiryProduct()">
+						<option value="">문의 유형을 선택해 주세요.</option>
+						<option th:each="type : ${inquiryType}" 
+								th:value="${type}" 
+								th:text="${type}">
+						</option>
+					</select>
+					<div class="select-arrow-down"></div>
 				</div>
-				<div>
-					<input type="text">
-				</div>
-				<div>
-					<p class="important">내용</p>
-				</div>
-				<div>
-					<input type="text">
-				</div>
-				<div></div>
-				<div>
-					<textarea rows="4" cols="50"></textarea>
+			
+				<!-- 문의 상품 부분 -->
+				<p id="inquiryProduct" class="sub-title-font important" style="display: none;">문의상품</p>
+		
+				<div id="inquiryProductQty" class="flex-column" style="gap: 20px; display: none;">
+					<button class="default-btn border btn-custom" onclick="openOrderProduct()">주문상품 선택</button>
+					<div class="flex-center" style="margin: 10px 0px 10px 0px; gap: 40px;">
+						<span>주문번호<span id="order-number" class="content-font"> 20240907-0001</span></span>
+						
+						<div id="quantitySection" class="flex-center" style="gap: 5px;">
+							<label class="content-font" for="quantity">교환요청수량</label>
+							
+							<div class="reduce-qty">
+								<i class="fa-solid fa-minus" onclick="changeQty(-1)"></i>
+								<input type="number" max="999" id="quantity" class="input-qty" value="1" />
+								<i class="fa-solid fa-plus" onclick="changeQty(1)"></i>
+							</div>
+						</div>
+					
+					</div>
 				</div>
 				
-				<div>
-					<p>사진첨부 0/1</p>
+				<p class="sub-title-font important">내용</p>
+				
+				<div class="flex-column" style="gap: 10px;">
+					<input type="text" id="inquiryTitle" class="content-font input-full" placeholder="제목을 입력해주세요." readonly style="background-color: #EBECF0; pointer-events: none;">
+					<div class="textarea-container">
+						<textarea id="inquiryContent" class="content-font" rows="4" cols="50" placeholder="문의 내용을 입력해주세요." readonly style="background-color: #EBECF0; pointer-events: none;"></textarea>
+						<p class="char-count">
+							<span id="charCount">0</span><span>/500</span>
+						</p>
+					</div>
 				</div>
-				<div>
-					<p>정확한 답변을 위해 사진을 첨부해주세요</p>
-					<input type="image">
-					<p>*JPG, PNG, GIF 파일만 최대 1장 업로드 가능합니다.</p>
-				</div>
-			</div>
 			
+				<div class="sub-title-font" style="display: flex;">
+					<p id="upload-status">사진첨부 0</p><p class="grey">/1</p>
+				</div>
+			
+				<div class="image-upload-container">
+					<p class="grey">정확한 답변을 위해 사진을 첨부해주세요</p>
+					<input type="file" id="image-upload" accept=".jpg, .jpeg, .png, .gif" class="input-file" disabled onchange="previewImage(event)">
+					
+					 <label for="image-upload" class="image-upload-label">
+					    <img id="preview" src="" style="max-width: 100%; width: 100%; max-height: 100%; display: none; position: absolute; top: 0; left: 10; object-fit: cover;"/>
+						<span>+</span>
+					</label>
+					<p class="grey">*JPG, JPEG, PNG, GIF 파일만 최대 1장 업로드 가능합니다.</p>
+				</div>
+			
+			</div>
 		</div>
 	</div>
+
+	<p class="sub-title-font" style="margin-top: 20px;">문의에 대한 답변 등록 시 알려드립니다.</p>
+	<div class="email-container">
+		<p class="sub-title-font">이메일</p>
+		<input type="text" id="inquiryEmail" class="input-long" style="border-radius: 5px; background-color: #EBECF0; pointer-events: none;" readonly>
+	</div>
+
+	<div class="btn-box">
+		<button type="submit" class="default-btn middle">문의접수</button>
+		<button type="button" class="default-btn middle border" onclick="location.href='/user/mypage/inquiries-page'">취소</button>
+	</div>
+	
 </div>
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-
+	<script src="/user/mypage/inquiries/js/inquiriesReg.js"></script>
+	
 </html>
