Fix: 어드민 주문목록페이지 css수정 / Feat: 주문완료페이지 DB 내용 불러오기, 결제요청 붙이기

--- a/src/main/resources/static/user/customer_order/css/complete-order.css
+++ b/src/main/resources/static/user/customer_order/css/complete-order.css
@@ -87,7 +87,7 @@
     border-radius: 0 0 10px 10px;
 }
 
-.product-text, .order-list, .qty-price, .price-wrap, .person-info, .addr-info, .btn-wrap {
+.product-text, .order-list, .qty-price, .price-wrap, .btn-wrap {
     display: flex;
     align-items: center;
     gap: 5px;
