--- a/src/main/resources/templates/user/main/customer_order/complete-order.html
+++ b/src/main/resources/templates/user/main/customer_order/complete-order.html
@@ -20,7 +20,7 @@
             </div>
             <div class="complete-msg">
                 <p>주문이 완료되었습니다.</p>
-                <p>주문번호 09090</p>
+                <p>주문번호 [[${orderDetail.order_num}]]</p>
             </div>
         </section>
 
@@ -30,22 +30,22 @@
                 <p class="sub-title">주문상품</p>
                 <div class="info-head">
                     <div class="product-text">
-                        <p>방구석 미술관</p>
-                        <p>외 <strong>1</strong>개</p>
-                        <p>(총 상품 <strong>1</strong>개)</p>
+                        <p th:text="${detailList[0].book_name}"></p>
+                        <p th:if="${orderDetail.order_cnt > 1}">외 <strong>[[${orderDetail.order_cnt - 1}]]</strong>개</p>
+                        <p>(총 상품 <strong>[[${orderDetail.order_cnt}]]</strong>개)</p>
                     </div>
                     <i class="fa-solid fa-angle-down product-info-arrow"></i>
                 </div>
                 <div class="list-wrap">
-                    <div class="order-list">
+                    <div class="order-list" th:each="list: ${detailList}">
                         <div class="img-wrap">
-                            <img src="/images/books/9780061129735.jpg" alt="책사진">
+                            <img th:src="${list.book_thumbnail_changed != null ? '/images/books/' + list.book_thumbnail_changed : '/images/books/noimg.png'}" alt="책사진">
                         </div>
                         <div class="book-info">
-                            <p class="info-subject">방구석 미술관</p>
+                            <p class="info-subject">[[${list.book_name}]]</p>
                             <div class="qty-price">
-                                <p>20000원</p>
-                                <p> / 1개</p>
+                                <p>[[${#numbers.formatInteger(list.order_detail_price, 0, 'COMMA')}]]원</p>
+                                <p> / [[${list.order_detail_qty}]]개</p>
                             </div>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                 <div class="info-content payment-info">
                     <p class="info-subject">최종 결제금액</p>
                     <div class="price-wrap">
-                        <p>15,000</p>
+                        <p>[[${#numbers.formatInteger(orderDetail.order_price_total, 0, 'COMMA')}]]</p>
                         <p>원</p>
                     </div>
                 </div>
@@ -67,15 +67,13 @@
                     <div class="deliver-info">
                         <p class="info-subject">받는 사람</p>
                         <div class="person-info">
-                            <p>홍길동 / </p>
-                            <p>010-1234-5678</p>
+                            <p>[[${orderDetail.recipient_name != null ? orderDetail.recipient_name : orderDetail.member_name}]] / [[${orderDetail.recipient_phoneNo != null ? orderDetail.recipient_phoneNo : orderDetail.member_phoneno}]]</p>
                         </div>
                     </div>
                     <div class="deliver-info">
                         <p class="info-subject">받는 주소</p>
                         <div class="addr-info">
-                            <p>서울시 노원구 상계로 64</p>
-                            <p>이젠아카데미</p>
+                            <p>[[${orderDetail.order_addr}]] [[${orderDetail.order_addr_detail}]]</p>
                         </div>
                     </div>
                 </div>
