--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -14,7 +14,7 @@
             <div class="user-profile-wrap">
                 <div class="img-wrap">
                     <img src="" alt="" class="user-img"/>
-                    <i class="fa-solid fa-circle-user"></i>
+<!--                    <i class="fa-solid fa-circle-user"></i>-->
                 </div>
                 <p class="user-name">길동이</p>
             </div>
