--- a/src/main/resources/static/user/common/css/footer.css
+++ b/src/main/resources/static/user/common/css/footer.css
@@ -1,15 +1,21 @@
 /* 푸터 */
 footer {
     position: relative;
-    width: 1280px;
+    width: 100%;
     height: 250px;
+    margin: 0 auto;
+    background-color: #FAFAFA;
+}
+
+footer .footer-inner {
+    width: 1280px;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 10px;
     padding: 48px 55px;
-    background-color: #FAFAFA;
 }
 
 footer .footer-logo{
