--- a/src/main/resources/static/user/members/css/showFindId.css
+++ b/src/main/resources/static/user/members/css/showFindId.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .showFindId-frame {
@@ -14,8 +14,12 @@ body {
     padding: 40px 30px;
     border-radius: 10px;
     width: 360px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    align-content: center;
 }
-
 .showFindId-frame img.mainlogo {
     width: 100px;
     margin-bottom: 30px;
@@ -86,4 +90,8 @@ button:last-of-type {
 
 button:hover {
     opacity: 0.9;
+}
+
+img {
+	margin-top: 20px;
 }
