--- a/src/main/resources/static/user/registration/css/registration.css
+++ b/src/main/resources/static/user/registration/css/registration.css
@@ -98,13 +98,13 @@ input.check-box.kakao[type=checkbox]:checked + label {
 
 
 .join-frame {
-    display: flex;              /* Flexbox 사용 */
-    flex-direction: column;      /* 세로로 배치 */
-    justify-content: center;     /* 세로 중앙 정렬 */
-    align-items: center;         /* 가로 중앙 정렬 */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     width: 100%;
-    height: 100vh;               /* 화면의 전체 높이 사용 */
-    max-width: 400px;            /* 원하는 너비로 설정 */
+    height: 100vh;
+    max-width: 400px;
     padding: 20px;
     margin: 0 auto;
 }
