--- a/src/main/resources/static/user/mypage/orderList/css/orderDetail.css
+++ b/src/main/resources/static/user/mypage/orderList/css/orderDetail.css
@@ -23,11 +23,22 @@
 	flex-direction: column;
 }
 
-.box-title {
+.box-title-wrapper {
+	justify-content: space-between;
+	align-items: center;
+	display: flex;
 	height: 65px;
-	line-height: 65px;
-	padding-left: 10px;
+	flex-direction: row;
+	padding: 0 20px 0 10px;
 	border-top: 1px solid #000000;
+}
+
+.return-cancel-btn {
+	width: 60px;
+	height: 30px;
+	font-weight: 400;
+	font-size: 14px;
+	border-radius: 5px;
 }
 
 .order-items {
@@ -91,13 +102,13 @@
 }
 
 .recipient-info-wrap {
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-    font-weight: 300;
+	display: flex;
+	flex-direction: column;
+	gap: 14px;
+	font-weight: 300;
 }
 
-.payment-info-wrap{
+.payment-info-wrap {
 	height: 80px;
 	border-bottom: 1px solid #c0c0c0;
 	display: flex;
@@ -121,25 +132,26 @@
 .delivery-info-detail, .price-title, .order-price, .payment-price {
 	font-weight: 600;
 }
+
 .price-wrap {
 	display: flex;
 }
 
 .income-deduction-wrap {
-    justify-content: space-between;
-    height: 80px;
-    border-bottom: 1px solid #c0c0c0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0 40px;
+	justify-content: space-between;
+	height: 80px;
+	border-bottom: 1px solid #c0c0c0;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 0 40px;
 }
 
-.default-btn {
-    width: 200px;
-    height: 50px;
-    border-radius: 5px;
-    margin-top: 35px;
+.order-list-btn {
+	width: 200px;
+	height: 50px;
+	border-radius: 5px;
+	margin-top: 35px;
 }
 
 .btn-area {
