--- a/src/main/resources/templates/user/mypage/customer_order/orderDetail.html
+++ b/src/main/resources/templates/user/mypage/customer_order/orderDetail.html
@@ -17,7 +17,10 @@
 
 		<div class="container">
 			<div class="order-items-box">
-				<h3 class="box-title">배송</h3>
+				<div class="box-title-wrapper">
+					<h3 class="box-title">배송</h3>
+					<button id="cancelButton" class="default-btn border return-cancel-btn" th:if="${orderDetails.order_delivery_status == '배송전'}">취소</button>
+				</div>
 				<div class="order-items" th:each="detail : ${orderDetails}">
 					<img class="book-thumbnail" th:src="'/images/books/' + ${detail.book_thumbnail_changed != null ? detail.book_thumbnail_changed : 'noimg.png'}" alt="책 이미지">
 					<div class="book-info">
@@ -71,8 +74,11 @@
 			</div>
 		</div>
 		<div class="btn-area">
-			<button class="default-btn" onclick="location.href='/user/mypage/orderList'">주문/배송 목록</button>
+			<button class="default-btn order-list-btn" onclick="location.href='/user/mypage/orderList'">주문/배송 목록</button>
 		</div>
 	</div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<script src="/user/mypage/orderList/js/orderDetail.js"></script>
 </html>
