--- a/src/main/resources/static/user/mypage/inquiries/css/inquiriesReg.css
+++ b/src/main/resources/static/user/mypage/inquiries/css/inquiriesReg.css
@@ -124,7 +124,8 @@
     border: 0.5px solid #888;
     padding: 20px;
     width: 500px;
-    height: 600px;
+    min-height: 500px;
+    max-height: 700px;
     border-radius: 8px;
     overflow: auto;
 }
@@ -137,6 +138,7 @@
     line-height: 30px;
     text-align: center;
     border-bottom : 1px solid #DFDFDF;
+    justify-content: space-between;
 }
 
 .order-item {
@@ -167,10 +169,58 @@
 	color: C0C0C0;
 }
 
-.head-button-area button {
+.custom-btn {
+	color: #7E7E7E;
+	border-radius: 20px;
+    width: 80px;
+    height: 30px;
+    background-color: #EBECF0;
+}
+.custom-clicked-btn {
 	color: #FFFFFF;
 	border-radius: 20px;
     width: 80px;
     height: 30px;
     background-color: #666666;
+}
+.cancel-btn-img {
+	width: 18px;
+	height: 18px;
+	background-color: #FFFFFF;
+	background-image: url(/user/common/imgs/cancel.png);
+	background-size: cover;
+	background-position: center;
+	border: none;
+	cursor: pointer;
+}
+
+.custom-modal-footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.custom-modal-footer .custom-modal-btn.confirm {
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 700;
+    width: 80px;
+    height: 40px;
+    border: 1px solid #845EC2;
+    border-radius: 5px;
+    background-color: #845EC2;
+    margin-top: 15px;
+}
+
+.order-summary {
+	display: flex; 
+	align-items: center;
+	margin: 15px 0px 20px 0px; 
+	gap: 40px;
+}
+
+.order-span {
+	border: 1px solid #C0C0C0;
+    border-radius: 5px;
+    padding: 15px;
+	
 }
