Fix: 폰트어썸 변경

--- a/src/main/resources/templates/admin/common/fragments/config.html
+++ b/src/main/resources/templates/admin/common/fragments/config.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/admin/common/css/modal.css">
 
 	<!-- 폰트 -->
+	
 	<link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet">
 
 	<!-- 구글 아이콘 -->
@@ -29,7 +30,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 	<!-- 폰트어썸 -->
-	<script src="https://kit.fontawesome.com/d95a86acc3.js"></script>
+	<script src="https://kit.fontawesome.com/302ba19bbe.js" crossorigin="anonymous"></script>
 </head>
       
 </html>
