--- a/src/main/resources/templates/user/common/fragments/config.html
+++ b/src/main/resources/templates/user/common/fragments/config.html
@@ -19,8 +19,7 @@
 	<link rel="stylesheet" href="/user/common/css/modal.css" />
 
 	<!-- 폰트어썸 -->
-	<script src="https://kit.fontawesome.com/d95a86acc3.js"></script>
-	
+	<script src="https://kit.fontawesome.com/302ba19bbe.js" crossorigin="anonymous"></script>
 	<!-- 구글 아이콘 -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	
