--- a/src/main/resources/templates/admin/customer_orders/customerDetail.html
+++ b/src/main/resources/templates/admin/customer_orders/customerDetail.html
@@ -178,7 +178,7 @@
 						<span th:text="${info.order_complete_qty <= 0 ? '-' : info.order_complete_qty + '개'}"></span>
 					</div>
 					<div class="input-qty-data">
-						<span><input type="text" th:value="${info.order_request_qty != null ? info.order_request_qty : 0} - ${info.order_complete_qty != null ? info.order_complete_qty : 0}" /></span>
+						<span><input type="number" name="input_qty" oninput="inputNumberMax(this);" th:data-detail_qty="${info.order_detail_qty}" th:value="${info.order_request_qty - info.order_complete_qty > 0 ? info.order_request_qty - info.order_complete_qty : 0}"/></span>
 					</div>
 					<div class="purchase-data" >
 						<span th:text="${#numbers.formatInteger(info.order_price_sum, 0, 'COMMA')} + '원'"></span>
@@ -207,7 +207,7 @@
 		<input type="hidden" name="order_selected_status"/>
 		<input type="hidden" name="order_num" th:value="${detail.order_num}"/>
 	</form>
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="/admin/customer_orders/js/detail.js"></script>
 </div>
 </html>
