--- a/src/main/resources/templates/user/mypage/customer_order/cancleCompletion.html
+++ b/src/main/resources/templates/user/mypage/customer_order/cancleCompletion.html
@@ -24,11 +24,11 @@
 	<div th:each="detail : ${cancleList}">
 		<div class="cancle-book-detail">
 			<div>
-				<img th:src="'/images/books/' + ${detail.book_thumbnail_changed != null ? detail.book_thumbnail_changed : 'noimg.png'}" alt="책 이미지" width="80" height="114">
+				<a th:href="'/user/products/detail?book_isbn=' + ${detail.book_isbn}"><img th:src="'/images/books/' + ${detail.book_thumbnail_changed != null ? detail.book_thumbnail_changed : 'noimg.png'}" alt="책 이미지" width="80" height="114"></a>
 			</div>
 			<div class="book-info">
 				<div>
-					<span class="book-name" th:text="${detail.book_name}"></span>
+					<a th:href="'/user/products/detail?book_isbn=' + ${detail.book_isbn}"><span class="book-name" th:text="${detail.book_name}"></span></a>
 				</div>
 				<div>
 					<span class="purchase-qty" th:text="'수량: ' + ${detail.order_detail_qty} + '개'"></span>
