--- a/src/main/resources/templates/user/mypage/inquiries/inquiriesReg.html
+++ b/src/main/resources/templates/user/mypage/inquiries/inquiriesReg.html
@@ -46,7 +46,7 @@
 								
 								<div class="reduce-qty">
 									<i class="fa-solid fa-minus" onclick="changeQty(-1)"></i>
-									<input type="number" id="quantity" class="input-qty" th:name="order_detail_qty" value="1" readonly/>
+									<input type="number" id="quantity" class="input-qty" th:name="order_request_qty" value="1" readonly/>
 									<i class="fa-solid fa-plus" onclick="changeQty(1)"></i>
 								</div>
 							</div>
@@ -75,7 +75,7 @@
 						<input type="file" id="image-upload" accept=".jpg, .jpeg, .png, .gif" class="input-file" th:name="imageFile" readonly onchange="previewImage(event)">
 						
 						 <label for="image-upload" class="image-upload-label">
-						    <img id="preview" src="" style="max-width: 100%; width: 100%; max-height: 100%; display: none; position: absolute; top: 0; left: 10; object-fit: cover;"/>
+						    <img id="preview" src="" style="max-width: 100%; max-height: 100%; display: none; position: absolute; top: 0; left: 10;"/>
 							<span>+</span>
 						</label>
 						<p class="grey">*JPG, JPEG, PNG, GIF 파일만 최대 1장 업로드 가능합니다.</p>
