Feat : footer 각 버튼 페이지 구현

--- a/src/main/resources/templates/user/common/fragments/footer.html
+++ b/src/main/resources/templates/user/common/fragments/footer.html
@@ -10,10 +10,10 @@
     </div>
     <div class="footer-middle">
         <ul>
-            <li><a href="#">이용약관</a></li>
-            <li><a href="#">개인정보처리방침</a></li>
-            <li><a href="#">청소년보호정책</a></li>
-            <li><a href="#">이메일 무단 수집거부</a></li>
+            <li><a href="/user/terms-policy">이용약관</a></li>
+            <li><a href="/user/privacy-policy">개인정보처리방침</a></li>
+            <li><a href="/user/youth-policy">청소년보호정책</a></li>
+            <li><a href="/user/email-policy">이메일 무단 수집거부</a></li>
         </ul>
         <div class="company-info">
             <p>(주)웨일북스</p>
@@ -28,8 +28,8 @@
         <p><strong>운영시간</strong> 평일 09:00 ~ 18:00 / 점심시간 12:30 ~ 13:30</p>
         <p><strong>대표메일</strong> customer@whalebooks.co.kr</p>
         <div class="btn-wrap">
-            <button class="footer-btn inquery">1:1문의</button>
-            <button class="footer-btn notice">공지사항</button>
+            <button class="footer-btn inquery" onclick="location.href='/user/mypage/inquiries-page'">1:1문의</button>
+            <button class="footer-btn notice" onclick="location.href='/user/mypage/notices-page'">공지사항</button>
         </div>
     </div>
 </div>
