--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -53,6 +53,7 @@
 </div>
 <footer th:insert="~{/user/common/fragments/footer :: FooterFragment}"></footer>
 
+<script src="/user/common/js/myPage.js"></script>
 <script src="/user/common/js/main.js"></script>
 <script src="/user/common/js/header.js"></script>
 
