--- a/src/main/resources/static/user/common/css/header.css
+++ b/src/main/resources/static/user/common/css/header.css
@@ -14,12 +14,19 @@ header {
 }
 
 .header-top {
-    display: flex;
-    justify-content: flex-end;
-    border-bottom: 1px solid #F6F6F6;
     width: 100%;
     height: 40px;
+    border-bottom: 1px solid #F6F6F6;
+}
+
+.header-top-inner {
+    width: 1280px;
+    margin: 0 auto;
+    padding: 13px 55px;
+    display: flex;
+    justify-content: flex-end;
     align-items: center;
+
 }
 
 .top-menu-wrap {
