--- a/src/main/resources/templates/user/main/customer_order/payment.html
+++ b/src/main/resources/templates/user/main/customer_order/payment.html
@@ -144,7 +144,8 @@
                     <span>상품이 없습니다</span>
                 </div>
                 <div class="product-list" th:each="item : ${combinedItems}">
-                    <input type="hidden" name="order_name" id="order_name" th:data-order-name="${combinedItems[0].book_name} + ' 외 ' + ${itemsCnt - 1} +'권'">
+                    <input type="hidden" name="order_name" id="order_name"
+                           th:data-order-name="${itemsCnt == 1 ? combinedItems[0].book_name : combinedItems[0].book_name + ' 외 ' + (itemsCnt - 1) + '권'}">
                     <input type="hidden" name="book_isbn" class="order-book-isbn" th:data-isbn="${item.book_isbn}">
                     <div class="list-left">
                         <div class="img-wrap">
@@ -190,7 +191,7 @@
                     <div class="agree-text">
                         <strong>수집하는 개인정보의 항목</strong> <br>
                         <br>
-                        ① 교보문고는 구매, 원활한 고객상담, 각종 서비스의 제공을 위해 주문 이용 시 아래와 같은 개인정보를 수집하고 있습니다.<br>
+                        ① 고래문고는 구매, 원활한 고객상담, 각종 서비스의 제공을 위해 주문 이용 시 아래와 같은 개인정보를 수집하고 있습니다.<br>
                         <br>
                         o 필수수집항목 : 이름, 휴대폰번호, 이메일, 수신자정보(성명,주소,휴대폰번호,이메일), 개인통관고유부호(해외직구상품구매시)<br>
                         o 수집목적 : 상품배송, 선물하기 서비스 제공, 배송지 관리<br>
@@ -205,23 +206,15 @@
                         ④ 결제 과정에서 아래와 같은 정보들이 수집될 수 있습니다.<br>
                         <br>
                         - 신용카드 결제 시 : 카드사명, 카드번호 등<br>
-                        - 휴대폰 결제 시 : 이동전화번호, 통신사, 결제승인번호, 이메일주소 등<br>
-                        - 계좌이체 시 : 은행명, 계좌번호 등<br>
-                        - 상품권 이용 시 : 상품권 번호<br>
-                        - 환불시 : 환불계좌정보(은행명, 계좌번호, 예금주명)<br>
-                        - 제휴포인트 결제시 : 제휴사명, 카드번호<br>
-                        - 현금영수증 : 휴대폰번호, 현금영수증 카드번호,, 사업자번호<br>
                         <br>
                         개인정보의 수집 및 이용목적<br>
                         <br>
-                        “교보문고"는 수집한 개인정보를 다음의 목적을 위해 활용합니다. 이용자가 제공한 모든 정보는 하기 목적에 필요한 용도 이외로는 사용되지 않으며, 이용 목적이 변경될 시에는
+                        “고래문고"는 수집한 개인정보를 다음의 목적을 위해 활용합니다. 이용자가 제공한 모든 정보는 하기 목적에 필요한 용도 이외로는 사용되지 않으며, 이용 목적이 변경될 시에는
                         사전동의를 구할 것입니다.<br>
                         <br>
                         ① 서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산<br>
                         - 컨텐츠 제공, 특정 맞춤 서비스 제공, 물품배송 또는 청구서 등 발송, 금융거래 본인 인증 및 금융 서비스, 구매 및 요금 결제, 요금추심 등<br>
                         <br>
-                        ② 비회원 관리<br>
-                        - 비회원 구매 서비스 이용에 따른 본인 확인, 개인 식별, 분쟁 조정을 위한 기록보존, 불만처리 등 민원처리, 고지사항 전달<br>
                         <br>
                         개인정보 보유 및 이용기간<br>
                         <br>
