--- a/src/main/resources/static/user/mypage/orderList/css/orderDetail.css
+++ b/src/main/resources/static/user/mypage/orderList/css/orderDetail.css
@@ -33,6 +33,12 @@
 	border-top: 1px solid #000000;
 }
 
+.box-title {
+	display: flex;
+	font-size: 16px;
+	gap: 5px;
+}
+
 .return-cancel-btn {
 	width: 60px;
 	height: 30px;
@@ -44,9 +50,9 @@
 .order-items {
 	display: flex;
 	align-items: center;
-	padding: 15px 30px 15px 50px;
+	padding: 15px 30px 15px 40px;
 	border-top: 1px solid #c0c0c0;
-	gap: 15px;
+	gap: 20px;
 }
 
 .book-thumbnail {
@@ -65,6 +71,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+	font-weight: 600;
 }
 
 .purchase-qty {
@@ -129,7 +136,8 @@
 	justify-content: space-between;
 }
 
-.delivery-info-detail, .price-title, .order-price, .payment-price {
+.box-title, .delivery-info-detail, .price-title, .order-price,
+	.payment-price {
 	font-weight: 600;
 }
 
