Feat : 1:1 문의 리스트 페이징 기능 구현

--- a/src/main/resources/static/user/mypage/inquiries/css/inquiries.css
+++ b/src/main/resources/static/user/mypage/inquiries/css/inquiries.css
@@ -31,8 +31,12 @@
 
 
 .inquiry-title {
+	width: 300px;
 	font-size: 16px; 
 	font-weight: 600;
+ 	white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .inquiry-status {
