--- a/src/main/resources/static/user/mypage/inquiries/css/inquiriesReg.css
+++ b/src/main/resources/static/user/mypage/inquiries/css/inquiriesReg.css
@@ -131,6 +131,7 @@
 }
 
 .inquiry-modal-text {
+	margin-bottom: 20px;
 	font-size: 20px;
 	font-weight: 700;
     display: flex;
@@ -157,32 +158,12 @@
     padding-top: 5px;
     gap: 5px;
 }
-.head-button-area {
-	margin: 20px 0px 10px 0px;
-	display: flex;
-    gap: 8px;
-	
-}
 
 .btn-spacebetween {
 	margin: 0 10px;
 	color: C0C0C0;
 }
 
-.custom-btn {
-	color: #7E7E7E;
-	border-radius: 20px;
-    width: 80px;
-    height: 30px;
-    background-color: #EBECF0;
-}
-.custom-clicked-btn {
-	color: #FFFFFF;
-	border-radius: 20px;
-    width: 80px;
-    height: 30px;
-    background-color: #666666;
-}
 .cancel-btn-img {
 	width: 18px;
 	height: 18px;
@@ -223,4 +204,13 @@
     border-radius: 5px;
     padding: 15px;
 	
+}
+
+#preview {
+	max-width: 100%;
+	max-height: 100%;
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 10;
 }
