--- a/src/main/resources/templates/user/mypage/inquiries/inquiriesReg.html
+++ b/src/main/resources/templates/user/mypage/inquiries/inquiriesReg.html
@@ -72,10 +72,10 @@
 				
 					<div class="image-upload-container">
 						<p class="grey">정확한 답변을 위해 사진을 첨부해주세요</p>
-						<input type="file" id="image-upload" accept=".jpg, .jpeg, .png, .gif" class="input-file" th:name="imageFile" readonly onchange="previewImage(event)">
+						<input type="file" id="image-upload" accept=".jpg, .jpeg, .png, .gif" class="input-file" th:name="imageFile" disabled onchange="previewImage(event)">
 						
 						 <label for="image-upload" class="image-upload-label">
-						    <img id="preview" src="" style="max-width: 100%; max-height: 100%; display: none; position: absolute; top: 0; left: 10;"/>
+						    <img id="preview" src=""/>
 							<span>+</span>
 						</label>
 						<p class="grey">*JPG, JPEG, PNG, GIF 파일만 최대 1장 업로드 가능합니다.</p>
