Feat : 마이페이지 리뷰목록, 공지사항 페이징 기능 구현

--- a/src/main/resources/templates/user/mypage/inquiries/inquiries.html
+++ b/src/main/resources/templates/user/mypage/inquiries/inquiries.html
@@ -50,11 +50,7 @@
 	    <!-- 리스트 뽑아올 곳 -->
 	    <div id="inquiries-list"></div>
 	    
-	    <div id="pagination" class="page-area">
-			<i id="page-arrow-left" class="fa-solid fa-angle-left page-arrow"></i>
-			<button class="page-link"></button>
-			<i id="page-arrow-right" class="fa-solid fa-angle-right page-arrow"></i>
-		</div>
+	    <div id="page-area" class="page-area"></div>
 	</div>
 </div>
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
