Feat: 주문페이지 결제 api 연동

--- a/src/main/resources/templates/user/main/customer_order/complete-order.html
+++ b/src/main/resources/templates/user/main/customer_order/complete-order.html
@@ -20,6 +20,7 @@
             </div>
             <div class="complete-msg">
                 <p>주문이 완료되었습니다.</p>
+                <input type="hidden" name="order_num" id="order_num" th:value="${orderDetail.order_num}">
                 <p>주문번호 [[${orderDetail.order_num}]]</p>
             </div>
         </section>
