Feat : 공지사항 검색 필터 기능, 페이징 처리 기능 추가

--- a/src/main/resources/templates/user/mypage/notices/notices.html
+++ b/src/main/resources/templates/user/mypage/notices/notices.html
@@ -4,6 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/user/common/layout/myPageLayout}"
       layout:fragment="Content">
+      <link rel="stylesheet" href="/user/common/css/pagination.css" />
       <link rel="stylesheet" href="/user/mypage/notices/css/notices.css"/>
             
 <div class="content">
@@ -12,7 +13,7 @@
     <div class="myinfo-content">
 	    <p class="myinfo-title">공지사항</p>
 	    <div class="sub-info-bg">      
-	        <input type="text" class="input-long"/>  
+	        <input type="text" class="input-long" placeholder="검색할 제목을 입력해 주세요." />  
 	        <button class="default-btn">검색</button>
 	    </div>
 	    <div id="notice-qty" class="notice-qty"></div>
@@ -25,10 +26,11 @@
 	    
 	    <ul id="notices-list"></ul>
 	</div>
-	
+	<div id="page-area" class="page-area"></div>
+		
 	    
 		
 </div>
-	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>	
 	<script src="/user/mypage/notices/js/notices.js"></script>
 </html>
