--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -2,8 +2,8 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
-<link rel="stylesheet" href="/user/common/css/common.css" />
+<title>BOOKSTORE 로그인</title>
+<link rel="shortcut icon" th:href="@{/user/common/imgs/favicon.ico}" type="image/x-icon"><link rel="stylesheet" href="/user/common/css/common.css" />
 <link rel="stylesheet" href="/user/login/css/login.css" />
 <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   
