--- a/src/main/resources/templates/user/registration/registration.html
+++ b/src/main/resources/templates/user/registration/registration.html
@@ -2,7 +2,9 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>BOOKSTORE 회원가입</title>
+
+<link rel="shortcut icon" th:href="@{/user/common/imgs/favicon.ico}" type="image/x-icon">
 <link rel="stylesheet" href="/admin/managers/css/managerReg.css" />
 <link rel="stylesheet" href="/admin/common/css/modal.css" />
 <link rel="stylesheet" href="/user/registration/css/registration.css" />
